[gd_scene load_steps=20 format=2]

[ext_resource path="res://Resources/HUD/hud.gd" type="Script" id=1]
[ext_resource path="res://Assets/Others/upheavtt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/HUD/score.gd" type="Script" id=3]
[ext_resource path="res://Resources/HUD/power_up_slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/HUD/score_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/Others/dogicapixel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Resources/HUD/torch.gd" type="Script" id=7]
[ext_resource path="res://Assets/HUD/torch_spritesheet.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
resource_name = "Score_0"
length = 1.8
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5, 1.55, 1.6, 1.65, 1.7, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Score_1"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Score_2"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Score_3"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Score_4"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Score_5"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Torch"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 8

[node name="LevelName" type="RichTextLabel" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -16.0
margin_right = 368.0
margin_bottom = 48.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true

[node name="ScoreRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -416.0
margin_top = -120.0
margin_right = -313.636
margin_bottom = -17.2481

[node name="ScoreSprite" type="Sprite" parent="Control/ScoreRect"]
position = Vector2( -6.10352e-05, 8 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
centered = false
hframes = 6
vframes = 6
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/ScoreRect/ScoreSprite"]
autoplay = "Score_0"
anims/Score_0 = SubResource( 1 )
anims/Score_1 = SubResource( 2 )
anims/Score_2 = SubResource( 3 )
anims/Score_3 = SubResource( 4 )
anims/Score_4 = SubResource( 5 )
anims/Score_5 = SubResource( 6 )

[node name="TorchRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -504.0
margin_top = -92.0
margin_right = -440.0
margin_bottom = -28.0
script = ExtResource( 7 )

[node name="TorchSprite" type="Sprite" parent="Control/TorchRect"]
position = Vector2( 27, 32 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/TorchRect/TorchSprite"]
autoplay = "Torch"
anims/RESET = SubResource( 11 )
anims/Torch = SubResource( 12 )

[node name="TorchCounter" type="Label" parent="Control/TorchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
margin_right = 2.0
margin_bottom = 10.0
rect_scale = Vector2( 0.6, 0.6 )
theme = SubResource( 10 )
text = "x1"

[node name="PowerUpSlot1" parent="Control" instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -92.0
margin_right = 78.0
margin_bottom = -68.0
rect_scale = Vector2( 3, 3 )

[node name="PowerUpSlot2" parent="Control" instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 134.0
margin_top = -92.0
margin_right = 156.0
margin_bottom = -68.0
rect_scale = Vector2( 3, 3 )

[node name="PowerUpSlot3" parent="Control" instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 212.0
margin_top = -92.0
margin_right = 234.0
margin_bottom = -68.0
rect_scale = Vector2( 3, 3 )

[node name="Tween" type="Tween" parent="Control"]
